# rbk_12

./: LICENSE  Makefile  README.md  definitions.py  pyproject.toml  setup.cfg
data/authors/: authors.json
notebooks/: full_pipeline.ipynb  pipeline.ipynb  step-1-merge-data.ipynb  step-2.ipynb  step-3-full.ipynb
pdf/: rbk_shirokov.pptx
scrapper/: items.py  paths.py  pipelines.py  settings.py
scrapper/services/: pipeline.py
scrapper/services/transformers/: base_transformer.py  news_transformers.py
scrapper/spiders/news/: parse_news.py  parse_one_new.py
src/: constants.py
src/prediction/: utils.py
src/transformers/base/: __init__.py  compose.py  transformer.py
src/transformers/feature_generation/: __init__.py  authors.py  category.py  ctr.py  date.py  multilabel.py  selector.py  tags.py  text.py  tfidf.py  title.py
src/transformers/preprocess/: __init__.py  preprocess_loader.py  preprocess_saver.py  preprocess_transformers.py
sub/: ERA_TFIDF_1.csv  ERA_TFIDF_2.csv  ERA_TFIDF_3.csv  ERY.csv  ERY2.csv  ERY3.csv  last.csv  last2.csv  last3.csv  my_csv.csv  sub1.csv  sub2.csv  sub3_new_features.csv  sub4_new_features.csv  sub5_new_features.csv  sub6_new_features.csv  sub7_new_features.csv  tfidf_era_sub_1.csv  tfidf_era_sub_2.csv  tfidf_era_sub_3_full.csv
