[tool.poetry]
name = "RBK"
version = "1.0.0"
description = "RBK Popularity prediction"
authors = ["Aleksandr Shirokov"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.1"
pandas = "^1.4.3"
scikit-learn = "^1.1.1"
optuna = "^2.10.1"
lightgbm = "3.3.2"
natasha = "^1.4.0"
catboost = "^1.0.6"
sentence-transformers = "^2.2.2"
holidays = "^0.14.2"
nltk = "^3.7"
russiannames = "^1.0"
transformers = "^4.20.1"
tokenizers = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
autoflake = "^1.4"
isort = "^5.10.0"
black = "^22.1"
unify = "^0.5"
flake8 = "^4.0"
pylint = "^2.12.1"
mypy = "^0.940"
pytest-deadfixtures = "^2.2.1"
types-six = "^1.16.15"
ipykernel = "^6.15.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
